# http-cmp

./: .gitignore  Cargo.toml  Readme.md  index.html  run.sh
.cargo/: config.toml
axum-server/: Cargo.toml
axum-server/src/: main.rs
http-test-util/: Cargo.toml
http-test-util/src/: drain.rs  lib.rs
tester/: Cargo.toml
tester/src/: client.rs  main.rs  scenario.rs  statistics.rs
uring-hyper/: Cargo.toml
uring-hyper/src/: hyper_tokio_compat.rs  main.rs  uring_compat.rs
vanilla-hyper/: Cargo.toml
vanilla-hyper/src/: main.rs
