[workspace]
members = [ "axum-server","http-test-util", "tester", "uring-hyper", "vanilla-hyper"]
resolver = "2"

[workspace.dependencies]
http-test-util = { path = "./http-test-util" }

anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["json"] }

bytes = { version = "1.5.0" }
http-body-util = { version = "0.1.0" }

hyper = { version = "1.1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio", "client", "client-legacy", "http1"] }

pin-project-lite = "0.2.13"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net"]}
