[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-test-util = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync"]}