[package]
name = "http-test-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
pin-project-lite = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
