[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-test-util = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }

http-body-util = { workspace = true }
hyper = { workspace = true, features = ["client", "http1"]}
hyper-util = { workspace = true, features = ["tokio", "client", "client-legacy", "http1"] }

serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync"]}