[package]
name = "vanilla-hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-test-util = { workspace = true }

bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"]}
serde_json = { workspace = true }
